src/objects/User_Position_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>dwp_role__c</fullName>
        <label>DWP Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>prof_position_id__c</fullName>
        <label>User position code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>profile__c</fullName>
        <label>User profile</label>
        <type>TextArea</type>
    </fields>
    <label>User Position Mapping</label>
    <pluralLabel>User Position Mapping</pluralLabel>
</CustomObject>